# assignment-4-search-engine-michael-d-and-trevor-g-main

./: CMakeLists.txt  Document.cpp  Document.h  DocumentParser.cpp  DocumentParser.h  FileHandler.cpp  FileHandler.h  FilterEntry.h  HashTable.h  IndexEntry.cpp  IndexEntry.h  IndexHandler.cpp  IndexHandler.h  Makefile  QHUI.cpp  QueryEngine.cpp  QueryEngine.h  QueryInterface.h  Tree.h  document.md  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  test_FileHandler.h  test_IndexHandler.cpp  test_IndexHandler.h  test_Tree.cpp  test_tree.h
rapidjson/: pointer.h
util/: hash.h  string_view.h
