cmake_minimum_required(VERSION 3.15)
project(HelloWorld VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
include(CTest)
enable_testing()
add_executable(HelloWorld main.cpp)
add_executable(superSearch main.cpp Document.h FileHandler.cpp IndexEntry.cpp IndexHandler.cpp porter2_stemmer.cpp QueryEngine.cpp Tree.h FilterEntry.h)
target_link_libraries(superSearch porter2-stemmer)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
